intl_*.arb に message を追加し、intl_translation:generate_from_arb を実行

--- a/samples/I18nSample/i18n_sample/lib/i18n/intl_en.arb
+++ b/samples/I18nSample/i18n_sample/lib/i18n/intl_en.arb
@@ -5,5 +5,11 @@
     "description": "Title for the Demo application",
     "type": "text",
     "placeholders": {}
-  }
+  },
+  "message": "Message",
+  "@message": {
+      "description": "Title for the Demo application",
+      "type": "text",
+      "placeholders": {}
+    }
 }
